k8s-manifests/portfolio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: portfolio
    app.kubernetes.io/component: namespace
